# lunch

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CLAUDE.md  README.md  TODO.md  main.py  package-lock.json  package.json  pyproject.toml  repomix-output.md  repomix.config.json5  requirements.txt  ruff.toml  tailwind.config.js  taskfile.yml  util.py
.devcontainer/: Dockerfile
.kiro/specs/basecoat-ui-refactor/: design.md  requirements.md  tasks.md
app/: config.py  main.py
app/backend/: agent.py  db.py  logging.py  service.py
app/frontend/: gui.py  theme.py
app/static/: app.css  banner.pxd
backend/: service.py
backlog/: config.yml
backlog/tasks/: task-001 - Restructure-project-move-backend,-frontend,-static-to-app-directory.md  task-002 - Add-LLM-provider-config-for-ollama-and-openrouter-via-env-vars.md  task-003 - Integrate-pydantic-ai-duckduckgo_search_tool-for-restaurant-info-lookup.md  task-004 - Add-TTL-to-SQLite-restaurant-info-cache.md  task-004 - Cache-restaurant-info-via-pogocache.md  task-005 - Render-restaurant-picture-and-formatted-info-in-UI.md  task-006 - Fix-AI-agent-executor-conflict-in-Flet-desktop-mode.md  task-007 - Improve-web-version-startup-time.md  task-008 - Fix-3-failing-tests-in-test-suite.md  task-009 - Adjust-viewport-layout-for-mobile-devices.md  task-010 - Refactor-frontend-to-use-Basecoat-UI-component-library.md  task-011 - Fix-restaurant-list-view-scroll-indicator-and-dynamic-resizing.md  task-012 - Optimize-uv-PyInstaller-and-Tauri-build-times.md  task-013 - Reorganize-git-branches-preserve-Flet-as-branch,-make-FastHTML-the-new-main.md
core/: __init__.py  app.py
docs/: architecture.mmd  flet_summary.md  llms.txt
frontend/: gui.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/: app.css  input.css  styles.css
taskfiles/: flet.yml  npm.yml  pex.yml  tauri.yml  uv.yml
tests/: conftest.py  test_agent.py  test_agent_integration.py  test_db_operations.py  test_fasthtml_routes.py  test_gui_integration.py  test_gui_layout.py  test_integration.py  test_llm_config.py  test_restaurant_service.py  test_theme.py
utils/: __init__.py  db.py
