[project]
name = "lunch"
version = "0.1.0"
description = ""
authors = [
    { name = "zookinheimer", email = "zookinheimer@gmail.com" },
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" },
]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "flet[all]",
    "sqlmodel>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "icecream",
    "passlib",
    "pre-commit>=4.2.0",
    "PySimpleGUI",
    "sqlacodegen",
    "tk>=0.1.0,<0.2",
]

[tool.uv.sources]
sqlacodegen = { git = "https://github.com/agronholm/sqlacodegen.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
