[project]
name = "lunch"
version = "1.0.0"
description = ""
authors = [
    { name = "zookinheimer", email = "zookinheimer@gmail.com" },
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" },
]
readme = "README.md"

requires-python = ">=3.12,<3.13"

dependencies = [
    "certifi>=2025.7.14",
    "eliot>=1.17.5",
    "flet>=0.28.3,<0.29.0",
    "httpx>=0.27.0,<1.0.0",
    "msgpack>=1.0.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.0.0",
    "opentelemetry-api>=1.28.0,<1.39.0",
    "pydantic-ai-slim[duckduckgo]>=0.0.49",
    "python-decouple>=3.8",
    "python-fasthtml>=0.12.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "argcomplete<4.0.0,>=3.5.0",
    "deptry<1.0.0,>=0.23.0",
    "flet[all]>=0.28.3,<0.29.0",
    "icecream<3.0.0,>=2.1.3",
    "ipython<9.0.0,>=8.27.0",
    "mypy<2.0.0,>=1.14.1",
    "playwright>=1.57.0",
    "pyclean<4.0.0,>=3.0.0",
    "pytest-asyncio<1.0.0,>=0.25.2",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest<9.0.0,>=8.3.4",
    "qrcode[pil]>=7.4.2,<8.0.0",
    "rich<14.0.0,>=13.8.1",
    "ruff>=0.9.5",
]
test = [
    "coverage<8.0.0,>=7.6.1",
    "hypothesis[cli]<7.0.0,>=6.112.1",
    "pytest<9.0.0,>=8.3.3",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "pytest-cov>=6.1.1",
    "pytest-datafiles<4.0.0,>=3.0.0",
    "pytest-xdist<4.0.0,>=3.6.1",
]

[tool.uv.sources]
sqlacodegen = { git = "https://github.com/agronholm/sqlacodegen.git" }

[tool.deptry]
# DEP003: transitive deps
ignore = [
    "DEP003"
]

[tool.deptry.per_rule_ignores]
# DEP002: not used in codebase (excluding dev deps)
DEP002 = [
    "deptry",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "uvicorn"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks performance benchmark tests",
    "slow: marks tests as slow running"
]

[tool.coverage.run]
source = ["lunch"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "..."
]

[tool.flet.app]
module = "main"
path = "app"
# exclude = ["assets"] # --exclude

[tool.flet.macos]
build_arch = "arm64"
entitlement."com.apple.security.app-sandbox" = true
entitlement."com.apple.security.cs.allow-jit" = true
entitlement."com.apple.security.network.client" = true
entitlement."com.apple.security.network.server" = true
entitlement."com.apple.security.files.user-selected.read-only" = true
entitlement."com.apple.security.files.user-selected.read-write" = true
